timeware/src/objects/Reason__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Entity__c</fullName>
        <label>Reason Entity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Type__c</fullName>
        <label>Reason Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Reason</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reason Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>